--- a/.github/workflows/main_alegestor-api.yml
+++ b/.github/workflows/main_alegestor-api.yml
@@ -24,16 +24,20 @@ jobs:
           dotnet-version: "8.x"
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: |
+          cd api_back
+          dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: |
+          cd api_back
+          dotnet publish -c Release -o ${{github.workspace}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{github.workspace}}/myapp
 
   deploy:
     runs-on: windows-latest
