update azur final

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://alegestor-api.azurewebsites.net
+VITE_API_URL=https://alegestor-api-cjgac6b0b2bjhsb0.westus3-01.azurewebsites.net/
